# python-project-svg-file

./: README.md  pyproject.toml
src/python_project_svg_file/: OOP.py  Sampling_strategy.py  app.py
